--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="sk.lgstudio.easyflightbag.ui.FragmentHome"
+    tools:context=".fragments.FragmentHome"
     android:background="?attr/backgroundColor"
     android:id="@+id/home_screen"
     android:orientation="vertical"
