--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -1,8 +1,7 @@
 <resources>
-    <!-- Example customization of dimensions originally defined in res/values/dimens.xml
-         (such as screen margins) for screens with more than 820dp of available width. This
-         would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
+    <!-- -->
     <dimen name="activity_horizontal_margin">64dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="tab_padding_side">12dp</dimen>
     <dimen name="tab_padding">20dp</dimen>
     <dimen name="tab_min_w">72dp</dimen>
@@ -15,8 +14,13 @@
     <dimen name="row_padding">16dp</dimen>
     <dimen name="elevation_16">16dp</dimen>
     <dimen name="elevation_12">12dp</dimen>
-    <dimen name="bottomSnackbarHeigth">48dp</dimen>
+    <dimen name="bottom_snackbar_heigth">48dp</dimen>
     <dimen name="padding_snack_side">24dp</dimen>
     <dimen name="padding_snack_topbottom">14dp</dimen>
     <dimen name="big_text">32sp</dimen>
+
+    <dimen name="panel_closed">44dp</dimen>
+    <dimen name="calc_field_margin">6dp</dimen>
+    <dimen name="calc_text_size">14sp</dimen>
+    <dimen name="calc_field_padding">12dp</dimen>
 </resources>
