--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <color name="colorGreen">#49b94b</color>
     <color name="colorGreenDark">#287a29</color>
 
-    <color name="colorBlueLight">#8fb0d4</color>
+    <color name="colorBlueLight">#a5d1ff</color>
     <color name="colorBlue">#5091d9</color>
 
     <color name="colorRed">#d95950</color>
