--- a/app/src/main/res/layout/calc_pressure.xml
+++ b/app/src/main/res/layout/calc_pressure.xml
@@ -1,13 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="horizontal"
+              android:weightSum="1"
+              android:paddingTop="@dimen/tab_padding"
+              android:paddingBottom="@dimen/tab_padding">
 
-    <TextView
-        android:text="PRESSURE"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        />
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.2"
+        android:orientation="vertical">
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.5"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/calc_unit_text_hpa_bma"
+            style="@style/Calculator_edit_text_field"
+            />
+
+        <EditText
+            android:id="@+id/calc_unit_text_atm"
+            style="@style/Calculator_edit_text_field"
+            />
+
+        <EditText
+            android:id="@+id/calc_unit_text_inhg"
+            style="@style/Calculator_edit_text_field"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.3"
+        android:orientation="vertical">
+
+        <TextView
+            style="@style/Calculator_text_unit"
+            android:text="@string/calc_unit_hpa_bma"
+            />
+
+        <TextView
+            style="@style/Calculator_text_unit"
+            android:text="@string/calc_unit_atm"
+            />
+
+        <TextView
+            style="@style/Calculator_text_unit"
+            android:text="@string/calc_unit_inhg"
+            />
+
+
+    </LinearLayout>
+
+
+</LinearLayout>
