--- a/app/src/main/res/layout/calc_fuel.xml
+++ b/app/src/main/res/layout/calc_fuel.xml
@@ -1,13 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="horizontal"
+              android:weightSum="1"
+              android:paddingTop="@dimen/tab_padding"
+              android:paddingBottom="@dimen/tab_padding">
 
-    <TextView
-        android:text="FUEL"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        />
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.3"
+        android:orientation="vertical">
+
+        <TextView
+            style="@style/Calculator_text_unit"
+            android:text="@string/calc_unit_text_fuel"
+            android:layout_height="@dimen/row_height"
+            android:gravity="end"
+            />
+
+        <TextView
+            style="@style/Calculator_text_unit"
+            android:text="@string/calc_unit_text_density"
+            android:gravity="end"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.4"
+        android:orientation="vertical">
+
+        <Spinner
+            android:id="@+id/calc_unit_fueltype"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/calc_field_margin"
+            android:background="?attr/backgroundColorHighlightLight"
+            android:elevation="@dimen/elevation_4"
+            />
+
+        <EditText
+            android:id="@+id/calc_unit_text_fu_dens"
+            style="@style/Calculator_edit_text_field"
+            />
+
+        <EditText
+            android:id="@+id/calc_unit_text_fu_l"
+            style="@style/Calculator_edit_text_field"
+            />
+
+        <EditText
+            android:id="@+id/calc_unit_text_fu_kg"
+            style="@style/Calculator_edit_text_field"
+            />
+
+        <EditText
+            android:id="@+id/calc_unit_text_fu_usg"
+            style="@style/Calculator_edit_text_field"
+            />
+
+        <EditText
+            android:id="@+id/calc_unit_text_fu_impg"
+            style="@style/Calculator_edit_text_field"
+            />
+
+        <EditText
+            android:id="@+id/calc_unit_text_fu_lb"
+            style="@style/Calculator_edit_text_field"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.3"
+        android:orientation="vertical">
+
+        <TextView
+            style="@style/Calculator_text_unit"
+            android:layout_height="@dimen/row_height"
+            android:text=""
+            />
+
+        <TextView
+            style="@style/Calculator_text_unit"
+            android:text="@string/calc_unit_kg_m3"
+            />
+
+        <TextView
+            style="@style/Calculator_text_unit"
+            android:text="@string/calc_unit_l"
+            />
+
+        <TextView
+            style="@style/Calculator_text_unit"
+            android:text="@string/calc_unit_kg"
+            />
+
+        <TextView
+            style="@style/Calculator_text_unit"
+            android:text="@string/calc_unit_g_us"
+            />
+
+        <TextView
+            style="@style/Calculator_text_unit"
+            android:text="@string/calc_unit_g_imp"
+            />
+
+        <TextView
+            style="@style/Calculator_text_unit"
+            android:text="@string/calc_unit_lb"
+            />
+
+    </LinearLayout>
+
+
+</LinearLayout>
