--- a/app/src/main/res/layout/calc_time.xml
+++ b/app/src/main/res/layout/calc_time.xml
@@ -1,13 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:weightSum="1"
+    android:paddingTop="@dimen/tab_padding"
+    android:paddingBottom="@dimen/tab_padding">
 
-    <TextView
-        android:text="TIME"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        />
-</RelativeLayout>
+    <RadioGroup
+        android:id="@+id/calc_func_time_radio"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.3"
+        android:orientation="vertical"
+        android:layout_gravity="end"
+        >
+
+        <RadioButton
+            style="@style/Calculator_text_unit"
+            android:id="@+id/calc_func_time_radio_speed"
+            android:text="@string/calc_conv_speed"
+            android:layoutDirection="rtl"
+            android:gravity="end|center_vertical"
+            android:textAlignment="textEnd"
+            android:layout_gravity="start"
+            android:buttonTint="?attr/backgroundColorHighlight"
+            />
+
+        <RadioButton
+            style="@style/Calculator_text_unit"
+            android:id="@+id/calc_func_time_radio_dst"
+            android:text="@string/calc_conv_dist"
+            android:layoutDirection="rtl"
+            android:gravity="end|center_vertical"
+            android:textAlignment="textEnd"
+            android:layout_gravity="start"
+            android:buttonTint="?attr/backgroundColorHighlight"
+            />
+
+        <RadioButton
+            style="@style/Calculator_text_unit"
+            android:id="@+id/calc_func_time_radio_time"
+            android:text="@string/calc_func_time_"
+            android:layoutDirection="rtl"
+            android:gravity="end|center_vertical"
+            android:textAlignment="textEnd"
+            android:layout_gravity="start"
+            android:buttonTint="?attr/backgroundColorHighlight"
+            />
+
+    </RadioGroup>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.4"
+        android:orientation="vertical">
+
+
+        <EditText
+            android:id="@+id/calc_unit_text_time_s"
+            style="@style/Calculator_edit_text_field"
+            />
+
+        <EditText
+            android:id="@+id/calc_unit_text_time_d"
+            style="@style/Calculator_edit_text_field"
+            />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center">
+
+            <NumberPicker
+                android:id="@+id/calc_unit_time_pick_h"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+            <TextView
+                style="@style/Calculator_text_unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/calc_unit_h"/>
+
+            <NumberPicker
+                android:id="@+id/calc_unit_time_pick_min"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+            <TextView
+                style="@style/Calculator_text_unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/calc_unit_min"/>
+
+
+            <NumberPicker
+                android:id="@+id/calc_unit_time_pick_s"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+            <TextView
+                style="@style/Calculator_text_unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/calc_unit_sec"/>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.3"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/calc_func_time_s_btn"
+            style="@style/Calculator_button_unit"
+            android:text="@string/calc_unit_kmh"
+            />
+
+        <Button
+            android:id="@+id/calc_func_time_d_btn"
+            style="@style/Calculator_button_unit"
+            android:text="@string/calc_unit_km" />
+
+    </LinearLayout>
+
+
+</LinearLayout>
