--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,4 +23,5 @@
     <dimen name="calc_field_margin">6dp</dimen>
     <dimen name="calc_text_size">14sp</dimen>
     <dimen name="calc_field_padding">12dp</dimen>
+    <dimen name="calc_field_button_margin">3dp</dimen>
 </resources>
