--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -86,7 +86,15 @@
         <item name="android:textIsSelectable">false</item>
         <item name="android:textColor">?attr/primaryTextColor</item>
         <item name="android:maxLines">1</item>
-
     </style>
 
+    <style name="Calculator_button_unit">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/calc_text_size</item>
+        <item name="android:layout_margin">@dimen/calc_field_button_margin</item>
+        <item name="android:textColor">?attr/primaryTextColor</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
