--- a/app/src/main/res/layout/calc_time.xml
+++ b/app/src/main/res/layout/calc_time.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:weightSum="1"
     android:paddingTop="@dimen/tab_padding"
@@ -44,97 +44,125 @@
             android:id="@+id/calc_func_time_radio_time"
             android:text="@string/calc_func_time_"
             android:layoutDirection="rtl"
-            android:gravity="end|center_vertical"
+            android:gravity="center_vertical|end"
             android:textAlignment="textEnd"
             android:layout_gravity="start"
             android:buttonTint="?attr/backgroundColorHighlight"
-            />
+            android:layout_height="match_parent" />
 
     </RadioGroup>
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.4"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_weight="0.7"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="1"
+            android:orientation="horizontal"
+            android:baselineAligned="false">
 
 
-        <EditText
-            android:id="@+id/calc_unit_text_time_s"
-            style="@style/Calculator_edit_text_field"
-            />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.6"
+                android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/calc_unit_text_time_d"
-            style="@style/Calculator_edit_text_field"
-            />
+
+                <EditText
+                    android:id="@+id/calc_unit_text_time_s"
+                    style="@style/Calculator_edit_text_field"
+                    />
+
+                <EditText
+                    android:id="@+id/calc_unit_text_time_d"
+                    style="@style/Calculator_edit_text_field"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="0.4">
+
+                <Button
+                    android:id="@+id/calc_func_time_s_btn"
+                    style="@style/Calculator_button_unit"
+                    android:text="@string/calc_unit_kmh"
+                    />
+
+                <Button
+                    android:id="@+id/calc_func_time_d_btn"
+                    style="@style/Calculator_button_unit"
+                    android:text="@string/calc_unit_km" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/calc_field_margin"
             android:gravity="center">
 
             <NumberPicker
                 android:id="@+id/calc_unit_time_pick_h"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:divider="?attr/primaryColor"
                 />
 
             <TextView
                 style="@style/Calculator_text_unit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/calc_unit_h"/>
+                android:text="@string/calc_unit_h"
+                android:textStyle="bold" />
 
             <NumberPicker
                 android:id="@+id/calc_unit_time_pick_min"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:divider="?attr/primaryColor"
                 />
 
             <TextView
                 style="@style/Calculator_text_unit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/calc_unit_min"/>
+                android:text="@string/calc_unit_min"
+                android:textStyle="bold" />
 
 
             <NumberPicker
                 android:id="@+id/calc_unit_time_pick_s"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:divider="?attr/primaryColor"
                 />
 
             <TextView
                 style="@style/Calculator_text_unit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/calc_unit_sec"/>
+                android:text="@string/calc_unit_sec"
+                android:textStyle="bold" />
 
 
         </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="0.3"
-        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/calc_func_time_s_btn"
-            style="@style/Calculator_button_unit"
-            android:text="@string/calc_unit_kmh"
-            />
-
-        <Button
-            android:id="@+id/calc_func_time_d_btn"
-            style="@style/Calculator_button_unit"
-            android:text="@string/calc_unit_km" />
-
-    </LinearLayout>
 
 
 </LinearLayout>
