--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -107,4 +107,15 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:gravity">center</item>
     </style>
+
+    <style name="Menu_icon_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@drawable/bck_transparent</item>
+        <item name="android:paddingLeft">@dimen/tab_padding_side</item>
+        <item name="android:paddingRight">@dimen/tab_padding_side</item>
+        <item name="android:paddingTop">@dimen/tab_padding</item>
+        <item name="android:paddingBottom">@dimen/tab_padding</item>
+        <item name="android:minWidth">@dimen/tab_min_w</item>
+    </style>
 </resources>
