--- a/app/src/main/res/layout/spinner_text_item.xml
+++ b/app/src/main/res/layout/spinner_text_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@drawable/bck_transparent"
+    android:background="?attr/backgroundColor"
     android:layout_height="wrap_content"
     android:padding="@dimen/row_padding"
     android:layout_margin="0dp">
