--- a/app/src/main/res/layout/aip_list_item.xml
+++ b/app/src/main/res/layout/aip_list_item.xml
@@ -1,34 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/row_padding"
     android:id="@+id/aip_row">
 
     <ImageView
-        android:id="@+id/aip_row_image_list"
+        android:id="@+id/aip_row_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_expand_right_inv"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        />
 
-    <ImageView
-        android:id="@+id/aip_row_image_doc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_docs_inv"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
         />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_toStartOf="@id/aip_row_image_list">
+        android:layout_toEndOf="@id/aip_row_icon"
+        android:layout_marginEnd="@dimen/list_icon_margin">
 
         <TextView
             android:layout_width="wrap_content"
@@ -51,7 +44,4 @@
             />
 
     </LinearLayout>
-
-
-
 </RelativeLayout>
