--- a/app/src/main/res/layout/menu_tab.xml
+++ b/app/src/main/res/layout/menu_tab.xml
@@ -5,14 +5,16 @@
     android:background="?attr/primaryColor"
     android:fillViewport="false"
     android:elevation="@dimen/elevation_12"
-    >
+    android:layout_centerHorizontal="false"
+    android:layout_centerInParent="false"
+    android:layout_centerVertical="false">
 
     <LinearLayout
 
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        >
+        android:layout_gravity="center_horizontal">
 
         <ImageButton
             style="@style/Menu_icon_style"
@@ -23,17 +25,17 @@
 
         <ImageButton
             style="@style/Menu_icon_style"
-            android:id="@+id/tab_aip"
-            android:src="@drawable/ic_library"
-            android:contentDescription="@string/tab_aip"
+            android:id="@+id/tab_calc"
+            android:src="@drawable/ic_plane"
+            android:contentDescription="@string/tab_functions"
             android:alpha="0.5"
             />
 
         <ImageButton
             style="@style/Menu_icon_style"
-            android:id="@+id/tab_weather"
-            android:src="@drawable/ic_cloud"
-            android:contentDescription="@string/tab_weather"
+            android:id="@+id/tab_aip"
+            android:src="@drawable/ic_library"
+            android:contentDescription="@string/tab_aip"
             android:alpha="0.5"
             />
 
@@ -50,22 +52,6 @@
             android:id="@+id/tab_docs"
             android:src="@drawable/ic_docs"
             android:contentDescription="@string/tab_docs"
-            android:alpha="0.5"
-            />
-
-        <ImageButton
-            style="@style/Menu_icon_style"
-            android:id="@+id/tab_plan"
-            android:src="@drawable/ic_plan"
-            android:contentDescription="@string/tab_plan"
-            android:alpha="0.5"
-            />
-
-        <ImageButton
-            style="@style/Menu_icon_style"
-            android:id="@+id/tab_calc"
-            android:src="@drawable/ic_functions"
-            android:contentDescription="@string/tab_functions"
             android:alpha="0.5"
             />
 
