--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,6 @@
     <dimen name="calc_field_button_margin">3dp</dimen>
 
     <dimen name="aip_list_margin">12dp</dimen>
+    <dimen name="row_big_height">72dp</dimen>
+    <dimen name="list_icon_margin">12dp</dimen>
 </resources>
