--- a/app/src/main/res/layout/aip_list.xml
+++ b/app/src/main/res/layout/aip_list.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:background="?attr/backgroundColor"
-    android:elevation="@dimen/elevation_8"
-    android:layout_marginEnd="@dimen/aip_list_margin">
+    android:elevation="@dimen/elevation_8">
 
 </ListView>
