--- a/app/src/main/res/layout/fragment_aip.xml
+++ b/app/src/main/res/layout/fragment_aip.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="?attr/backgroundColor">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?attr/backgroundColor"
+    >
 
     <HorizontalScrollView
         android:layout_width="match_parent"
@@ -11,7 +12,7 @@
         android:background="?attr/backgroundDarkColor">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/aip_list_layout"
             android:orientation="horizontal">
